# DewAI

./: .dockerignore  DISTRIBUTION.md  Dockerfile  LICENSE.md  README.md  SETUP-COMPLETE.md  build-release.bat  build-release.sh  docker-compose.yml  package-lock.json  package.json  typedoc.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: appendix-glossary.md  appendix-licenses.md  appendix-references.md  architecture.md  chakra-ui-notifications.md  faq.md  storage.md  troubleshooting.md  user-guide.md
docs/api/: hierarchy.html  index.html  modules.html
docs/api/assets/: highlight.css  navigation.js  search.js
docs/api/functions/: App.default.html  components_ui_chat-message.ChatMessage.html  components_ui_color-mode.ColorModeIcon.html  components_ui_color-mode.ColorModeProvider.html  components_ui_color-mode.useColorMode.html  components_ui_color-mode.useColorModeValue.html  components_ui_notifications.InlineAlert.html  components_ui_notifications.showAIResponseError.html  components_ui_notifications.showAIResponseGenerated.html  components_ui_notifications.showAnalysisError.html  components_ui_notifications.showAnalysisSuccess.html  components_ui_notifications.showGenericError.html  components_ui_notifications.showGenericWarning.html  components_ui_notifications.showInputTooLongWarning.html  components_ui_notifications.showModelChangeNotice.html  components_ui_notifications.showModelLoadSuccess.html  components_ui_notifications.showNotification.html  components_ui_notifications.showOllamaConnectionError.html  components_ui_notifications.showParticipantsUpdateError.html  components_ui_notifications.showParticipantsUpdateSuccess.html  components_ui_notifications.showSessionDeleteError.html  (+24 more)
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: sessions.json
src-tauri/src/: lib.rs  main.rs  main_new.rs  prompts.rs
src/components/: AnalysisDisplay.tsx  DiscussionInterface.tsx  EnhancedChatAPP.tsx  ParticipantEditorDrawer.tsx
src/hooks/: useAIModel.tsx
src/pages/: config.tsx  database.tsx  home.tsx  play.tsx  sessions.tsx  start.tsx
src/utils/: database.ts  text.test.ts  text.ts
(+69 files in other folders)
