[package]
name = "dewai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dewai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQL プラグイン（SQLite）
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
# HTTP クライアント reqwest（JSON 機能有効化）
reqwest = { version = "0.12.15", features = ["json"] }        # :contentReference[oaicite:3]{index=3}

# 非同期ランタイム Tokio
tokio   = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }  # :contentReference[oaicite:4]{index=4}

# エラー処理
anyhow    = "1.0"

# 日時処理
chrono = { version = "0.4", features = ["serde"] }
